Grace/tests/gibbs/errors/t051.grace
// ERROR = P1002
import StandardPrelude as sp
